Fixing alignments across browsers (#275)
* fixing alignments of modals across browsers + setting h2 to center in dialog

* adding legal basis placeholder

* centering manage study title

* tweaking title Study Assets -> Assets

* making external invite dialog wider

* tweaking dialog max width so it's not super squished on mobile

* fixing dialog clicks

* making close button sticky

* fixing alert width in dialog messing with the width

* adding padding to asset form to match study form

* adding grey border var for box etc + slight rounding of fieldset edge

* fixing some fields clipping through close button

* test workaround

--- a/web/src/components/studies/CreateStudyForm.module.css
+++ b/web/src/components/studies/CreateStudyForm.module.css
@@ -1,8 +1,8 @@
 .study-dialog {
   padding-bottom: 5rem;
 
-  h2 {
-    text-align: center;
+  div[role="alert"] {
+    max-width: 70vw;
   }
 }
 
@@ -34,7 +34,8 @@
   }
 
   .fieldset {
-    border: 1px solid var(--text--secondary);
+    border: 1px solid var(--grey-border--light);
+    border-radius: 3px;
     padding: 1rem;
     margin-block-end: 1.5rem;
     display: grid;
